--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -18,6 +18,7 @@
         android:layout_centerHorizontal="true"
         app:cardPreventCornerOverlap="false"
         android:clickable="false"
+        app:cardCornerRadius="15dp"
         android:foreground="?attr/selectableItemBackground"
         >
 
@@ -59,7 +60,10 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/pic_address"/>
+            android:transitionName="PicShare"
+            android:id="@+id/pic_address"
+            android:src="@mipmap/ic_launcher"
+            />
+
     </android.support.v7.widget.CardView>
 </RelativeLayout>
