创建登录界面

--- a/app/src/main/res/drawable/material_button.xml
+++ b/app/src/main/res/drawable/material_button.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+
     <!--点击背景-->
     <item android:state_pressed="true">
         <shape>
             <!--色值-->
-            <solid android:color="#99CC00" />
+            <solid android:color="#BB0A21" />
             <!--圆角-->
             <corners android:radius="10dp" />
         </shape>
@@ -12,7 +13,7 @@
     <!--默认背景-->
     <item>
         <shape>
-            <solid android:color="#99CC00" />
+            <solid android:color="#D3D4D9" />
             <corners android:radius="10dp" />
         </shape>
     </item>
