--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="dialogColor">#F0F66E</color>
     <color name="wanted">#757575</color>
-    <color name="mainColor">#1976D2</color>
+    <color name="mainColor">#607D8B</color>
 </resources>
