--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -20,50 +20,37 @@
         android:clickable="false"
         app:cardCornerRadius="15dp"
         android:foreground="?attr/selectableItemBackground"
+
         >
 
 
-        <TextView
-            android:text="时间"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textSize="20sp"
-            android:fontFamily="sans-serif-condensed"
-            android:layout_marginTop="160dp"
-            android:id="@+id/date_bill"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="190dp"
-            android:text="描述内容"
-            style="@style/MainContentStyle"
-            android:textSize="15sp"
-            android:id="@+id/des_bill"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="名字"
-            android:layout_marginTop="240dp"
-            android:layout_marginStart="15dp"
-            android:id="@+id/personame_each_bill"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="240dp"
-            android:layout_gravity="right"
-            android:layout_marginEnd="15dp"
-            android:id="@+id/money_each_bill"
-            android:text="XXX￥"/>
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           >
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="225dp"
             android:transitionName="PicShare"
             android:id="@+id/pic_address"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"
             />
 
+
+           <TextView
+               android:text="时间"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_gravity="center_horizontal"
+               android:textSize="15sp"
+               android:fontFamily="sans-serif-condensed"
+               android:id="@+id/date_bill"
+               android:paddingTop="240dp"
+               android:paddingLeft="16dp"/>
+
+
+       </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
