--- a/app/src/main/res/layout/floatbutton_layout.xml
+++ b/app/src/main/res/layout/floatbutton_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:hugo="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -11,13 +11,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/floatbutton"
         android:layout_gravity="end|bottom"
-        hugo:fab_size="normal"
+        app:fab_size="normal"
         android:layout_margin="16dp"
-        hugo:elevation="35dp"
-        hugo:borderWidth="0dp"
+        app:elevation="35dp"
+        app:borderWidth="0dp"
         android:src="@mipmap/add"
         android:clickable="true"
         android:background="?android:attr/selectableItemBackground"
+        android:backgroundTint="#795548"
         />
 
 </android.support.design.widget.CoordinatorLayout>
