--- a/app/src/main/res/layout/left_menu.xml
+++ b/app/src/main/res/layout/left_menu.xml
@@ -7,58 +7,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_marginTop="150dp"
         android:orientation="vertical"
         android:id="@+id/linearLayout"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:textSize="20sp"
-                android:id="@+id/bill_1"
-                android:fontFamily="sans-serif-light"
-                android:background="@mipmap/button_menu"
-                android:text="AA制记账"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif-light"
-                android:id="@+id/bill_2"
-                android:background="@mipmap/button_menu"
-                android:text="记账二"
-                />
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:textSize="20sp"
-                android:id="@+id/bill_3"
-                android:fontFamily="sans-serif-light"
-                android:background="@mipmap/button_menu"
-                android:text="记账三"
-                />
-        </RelativeLayout>
 
 
     </LinearLayout>
@@ -69,8 +23,8 @@
         android:background="#ffffff">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="90dp"
+            android:layout_height="80dp"
             android:layout_marginTop="16dp"
             android:layout_marginLeft="10dp"
             android:id="@+id/add_people_button"
@@ -87,14 +41,13 @@
             android:paddingTop="110dp"/>
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/add_people_button"
-            android:layout_marginLeft="20dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="25dp"
             android:id="@+id/settlemoney"
-            android:background="@mipmap/count_button"
+            android:background="@mipmap/count"
             android:layout_toEndOf="@+id/add_people_button"
-            android:layout_marginStart="21dp"
+            android:layout_marginStart="55dp"
            />
         <TextView
             android:layout_width="wrap_content"
@@ -106,5 +59,26 @@
             android:text="结算"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"/>
+
+
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="140dp"
+            android:id="@+id/returnLog"
+            android:background="@mipmap/returnlog"
+            android:layout_toEndOf="@+id/add_people_button"
+            android:layout_marginStart="2dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="210dp"
+            android:layout_toEndOf="@+id/add_people_button"
+            android:fontFamily="sans-serif-light"
+            android:textSize="20sp"
+            android:text="退出登录"
+            android:layout_marginStart="-5dp"
+            />
     </RelativeLayout>
 </LinearLayout>
