完成后端交互工作，总体编码完成

--- a/app/src/main/res/layout/right_content.xml
+++ b/app/src/main/res/layout/right_content.xml
@@ -40,7 +40,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/swipe_layout"
+            android:layout_marginTop="27dp">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
@@ -49,6 +53,8 @@
             android:id="@+id/recycle_view">
 
         </android.support.v7.widget.RecyclerView>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <include layout="@layout/floatbutton_layout"/>
 
