--- a/app/src/main/res/layout/card_dialog_layout.xml
+++ b/app/src/main/res/layout/card_dialog_layout.xml
@@ -1,17 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="250dp"
-    android:layout_height="400dp"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="10dp"
-    android:id="@+id/card_dialogWrapper"
-    >
-<ImageView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/old_pic"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                >
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        app:cardElevation="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        app:cardPreventCornerOverlap="false"
+        android:clickable="false"
+        android:foreground="?attr/selectableItemBackground"
+        app:cardBackgroundColor="#F0F66E"
+        >
 
 
-</android.support.v7.widget.CardView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="225dp"
+                android:transitionName="PicShare"
+                android:id="@+id/pic_address"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_launcher"
+                />
+
+
+            <TextView
+                android:text="时间"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15sp"
+                android:fontFamily="sans-serif-condensed"
+                android:id="@+id/date_bill"
+                android:paddingTop="240dp"
+                android:paddingLeft="16dp"/>
+
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+</RelativeLayout>
