--- a/app/src/main/res/layout/left_menu.xml
+++ b/app/src/main/res/layout/left_menu.xml
@@ -7,78 +7,111 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="150dp"
+        android:layout_height="350dp"
         android:orientation="vertical"
         android:id="@+id/linearLayout"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true">
-
-
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:background="#ffffff">
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="50dp">
         <Button
-            android:layout_width="90dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/add_people_button"
-            android:background="@mipmap/add_people1"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="25dp"
+            android:background="@mipmap/addpic"
             android:layout_marginBottom="20dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="25dp"
+            android:layout_marginTop="22dp"
+            android:paddingLeft="6dp"
             android:textSize="20sp"
+            android:id="@+id/add_people_button"
             android:fontFamily="sans-serif-light"
-            android:text="添加朋友"
-            android:id="@+id/textView1"
-            android:paddingTop="110dp"/>
-
-        <Button
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="25dp"
-            android:id="@+id/settlemoney"
-            android:background="@mipmap/count"
-            android:layout_toEndOf="@+id/add_people_button"
-            android:layout_marginStart="55dp"
-           />
-        <TextView
+            android:text="添加旅行账本"
+            android:paddingTop="10dp"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="170dp"
-            android:paddingTop="110dp"
-            android:fontFamily="sans-serif-light"
-            android:textSize="20sp"
-            android:text="结算"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"/>
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="25dp"
+                android:background="@mipmap/pencil"
+                android:layout_marginBottom="20dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:paddingLeft="6dp"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/settlemoney"
+                android:text="结算"
+                android:paddingTop="10dp"/>
+        </LinearLayout>
 
-
-        <Button
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="140dp"
-            android:id="@+id/returnLog"
-            android:background="@mipmap/returnlog"
-            android:layout_toEndOf="@+id/add_people_button"
-            android:layout_marginStart="2dp"
-            />
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="210dp"
-            android:layout_toEndOf="@+id/add_people_button"
-            android:fontFamily="sans-serif-light"
-            android:textSize="20sp"
-            android:text="退出登录"
-            android:layout_marginStart="-5dp"
-            />
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="25dp"
+                android:background="@mipmap/all_bill"
+                android:layout_marginBottom="20dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:paddingLeft="6dp"
+                android:textSize="20sp"
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/view_all_bills"
+                android:text="我的账本集"
+                android:paddingTop="10dp"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:background="#ffff"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="40dp"
+                android:background="@mipmap/exit"
+                android:layout_marginStart="25dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:fontFamily="sans-serif-light"
+                android:textSize="20sp"
+                android:text="退出登录"
+                android:id="@+id/returnLog"
+                android:layout_marginStart="5dp"
+                />
+        </LinearLayout>
+
+
+
     </RelativeLayout>
 </LinearLayout>
