--- a/app/src/main/res/layout/settlemoney_layout.xml
+++ b/app/src/main/res/layout/settlemoney_layout.xml
@@ -102,7 +102,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="490dp"
         android:orientation="vertical"
         android:id="@+id/textAddWrapper"
         android:layout_alignParentTop="true"
@@ -121,4 +121,13 @@
 
 
     </LinearLayout>
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="560dp"
+        android:layout_centerHorizontal="true"
+        android:text="结算确定"
+        android:id="@+id/finish_btn"
+        android:background="@drawable/material_button"
+        />
 </RelativeLayout>
