--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -1,15 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/dialog_lauout"
-                xmlns:app="http://schemas.android.com/apk/res-auto">
-    <EditText
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="300dp"
+    android:layout_height="230dp"
+    app:cardCornerRadius="15dp"
+    android:id="@+id/dialog_layout">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    android:background="@color/mainColor"
+    android:orientation="vertical">
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="title"
+        android:id="@+id/title"
+        android:textSize="20dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center_horizontal"/>
+
+
+    <EditText
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:hint="以逗号分隔"
+        android:layout_marginTop="15dp"
         android:id="@+id/editText"
+
         />
+</LinearLayout>
+
+
+
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
@@ -17,11 +42,12 @@
         android:id="@+id/numofManButton"
         android:src="@mipmap/ok"
         app:backgroundTint="#ff87ffeb"
+        android:layout_gravity="center"
         app:rippleColor="#33728dff"
         android:elevation="10dp"
         android:layout_below="@+id/editText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="70dp"
         android:onClick="confirm"/>
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
