--- a/app/src/main/res/layout/bill_descripe_layout.xml
+++ b/app/src/main/res/layout/bill_descripe_layout.xml
@@ -1,57 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:id="@+id/wrapper_text_edit"
-              android:layout_height="600dp">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="旅行日志"
-        android:layout_gravity="center_horizontal"
-        android:textSize="40dp"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="40dp"
-        android:hint="请描述"
-        android:id="@+id/des_bill_edit"
-        android:layout_gravity="center_horizontal"/>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    android:id="@+id/wrapper_text_edit"
+                                    android:layout_width="300dp"
+                                    android:layout_height="300dp"
+                                    android:orientation="vertical"
+                                    app:cardCornerRadius="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <EditText
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:id="@+id/money_num_edit"
-            android:numeric="decimal"
-            android:hint="请输入金额"
-            />
-        <Spinner
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:id="@+id/name_spinner"
-            >
+        android:layout_height="220dp"
+        android:orientation="vertical"
+        android:background="@color/mainColor">
 
-        </Spinner>
-    </LinearLayout>
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/material_button"
-            android:paddingBottom="8dp"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:text="OK!"
-            android:paddingTop="8dp"
-            android:textSize="18sp"
-            android:id="@+id/confirmButton"
             android:layout_gravity="center_horizontal"
-     />
+            android:layout_marginTop="15dp"
+            android:text="旅行日志"
+            android:textSize="30dp"/>
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/des_bill_edit"
+            android:layout_width="270dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:hint="请描述"
+            />
+
+
+        <EditText
+            android:id="@+id/money_num_edit"
+            android:layout_width="270dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:hint="请输入金额"
+            android:inputType="numberDecimal"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+            <Spinner
+                android:id="@+id/name_spinner"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="20dp"
+                ></Spinner>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:text="支出"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/confirmButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
+        android:background="@drawable/material_button"
+        android:textSize="18sp"
+        android:layout_marginBottom="15dp"
+        android:src="@mipmap/ok"
+        />
+
+</android.support.v7.widget.CardView>
