--- a/app/src/main/res/layout/sign_log_layout.xml
+++ b/app/src/main/res/layout/sign_log_layout.xml
@@ -17,6 +17,7 @@
         android:id="@+id/textView"
         android:transitionName="titleShare"
         android:textColor="#E5DCC5"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,13 +25,14 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/logSignCard"
             android:layout_width="300dp"
             android:layout_height="240dp"
-            app:cardCornerRadius="10dp"
             android:layout_marginTop="60dp"
-            android:id="@+id/logSignCard"
             app:cardBackgroundColor="#E5DCC5"
+            app:cardCornerRadius="10dp"
             >
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -38,14 +40,15 @@
                 android:hint="账号"
                 >
 
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="270dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="30dp"
-                android:id="@+id/username_Password"
-                android:layout_gravity="center_horizontal"/>
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/username_Password"
+                    android:layout_width="270dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="30dp"/>
 
             </android.support.design.widget.TextInputLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,12 +57,12 @@
                 >
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/password_EditText"
                     android:layout_width="270dp"
                     android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="25dp"
-                    android:id="@+id/password_EditText"
-                    android:inputType="textPassword"
-                    android:layout_gravity="center_horizontal"/>
+                    android:inputType="textPassword"/>
 
             </android.support.design.widget.TextInputLayout>
 
@@ -68,29 +71,28 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-            <Button
-                android:layout_width="260dp"
-                android:layout_height="40dp"
-                android:text="登录"
-                android:id="@+id/log_Button"
-                android:background="#1eb200"
-                android:layout_marginTop="130dp"
-                android:layout_gravity="center_horizontal"/>
+                <Button
+                    android:id="@+id/log_Button"
+                    android:layout_width="260dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="130dp"
+                    android:background="#CCD7C5"
+                    android:text="登录"/>
 
-            <Button
-                android:layout_width="260dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
-                android:text="注册"
-                android:layout_gravity="center_horizontal"
-                android:background="#ff0000"
-                android:id="@+id/Sign_Button"/>
+                <Button
+                    android:id="@+id/Sign_Button"
+                    android:layout_width="260dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:background="#C7A27C"
+                    android:text="注册"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
 
     </LinearLayout>
-
 
 
 </LinearLayout>
