--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="dialogColor">#F0F66E</color>
     <color name="wanted">#757575</color>
     <color name="mainColor">#607D8B</color>
+    <color name="caidanColor">#3F51B5</color>
 </resources>
