--- a/app/src/main/res/layout/billlist_layout.xml
+++ b/app/src/main/res/layout/billlist_layout.xml
@@ -1,39 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              >
-    <android.support.v7.widget.Toolbar
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
+
+    <ImageView
+        android:id="@+id/blur_pic"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/mainColor"
-        android:elevation="4dp"
-        android:id="@+id/toolbar"
-        >
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent"
+        android:scaleType="centerCrop"/>
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="我的账本"
-            android:layout_gravity="center"
-            />
-
-    </android.support.v7.widget.Toolbar>
     <com.gigamole.infinitecycleviewpager.HorizontalInfiniteCycleViewPager
         android:id="@+id/hicvp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:icvp_interpolator="@android:anim/accelerate_decelerate_interpolator"
-        app:icvp_scroll_duration="250"
         app:icvp_center_page_scale_offset="30dp"
-        app:icvp_min_page_scale_offset="5dp"
+        app:icvp_interpolator="@android:anim/accelerate_decelerate_interpolator"
         app:icvp_max_page_scale="0.8"
+        app:icvp_medium_scaled="false"
         app:icvp_min_page_scale="0.55"
-        app:icvp_medium_scaled="false"/>
+        app:icvp_min_page_scale_offset="5dp"
+        app:icvp_scroll_duration="250"/>
 
-
-</LinearLayout>
+</FrameLayout>
