--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,33 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:tools="http://schemas.android.com/tools"
-                                             android:layout_width="wrap_content"
-                                             android:layout_height="wrap_content"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <android.support.v7.widget.CardView
-        android:layout_width="450dp"
-        android:layout_height="270dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
         app:cardElevation="10dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         app:cardPreventCornerOverlap="false"
         android:clickable="false"
-        app:cardCornerRadius="15dp"
         android:foreground="?attr/selectableItemBackground"
-
         >
 
 
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           >
+
 
         <ImageView
             android:layout_width="match_parent"
@@ -43,14 +33,11 @@
                android:text="时间"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:layout_gravity="center_horizontal"
                android:textSize="15sp"
-               android:fontFamily="sans-serif-condensed"
                android:id="@+id/date_bill"
-               android:paddingTop="240dp"
-               android:paddingLeft="16dp"/>
+               android:layout_marginTop="240dp"
+               android:layout_marginBottom="5dp"
+               android:layout_marginLeft="16dp"/>
 
 
-       </RelativeLayout>
     </android.support.v7.widget.CardView>
-</RelativeLayout>
