--- a/app/src/main/res/layout/right_content.xml
+++ b/app/src/main/res/layout/right_content.xml
@@ -12,8 +12,8 @@
 
                     <android.support.v7.widget.Toolbar
                         android:layout_width="match_parent"
-                        android:layout_height="25dp"
-                        android:background="@color/mainColor"
+                        android:layout_height="35dp"
+                        android:background="@color/caidanColor"
                         android:elevation="4dp"
                         android:id="@+id/toolbar"
                         >
@@ -31,6 +31,7 @@
                             android:textSize="20sp"
                             android:text="@string/TitleString"
                             android:id="@+id/title"
+                            android:layout_marginBottom="10dp"
                             android:layout_gravity="center_horizontal"
                             />
                         <Button
