--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="280dp"
+    android:layout_alignParentTop="true"
+    android:layout_marginBottom="15dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:clickable="false"
+    android:foreground="?attr/selectableItemBackground"
+    app:cardElevation="10dp"
+    app:cardPreventCornerOverlap="false"
+    >
 
-    <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <ImageView
+        android:id="@+id/pic_address"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="15dp"
-        app:cardElevation="10dp"
-        android:layout_alignParentTop="true"
-        app:cardPreventCornerOverlap="false"
-        android:clickable="false"
-        android:foreground="?attr/selectableItemBackground"
-        >
+        android:layout_height="225dp"
+        android:scaleType="centerCrop"
+        android:transitionName="PicShare"
+        />
+
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="right"
+        android:id="@+id/cute_Pic"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="240dp"
+        android:src="@drawable/icecream01"
+        android:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/date_bill"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="240dp"
+        android:text="时间"
+        android:textSize="15sp"/>
 
 
-
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="225dp"
-            android:transitionName="PicShare"
-            android:id="@+id/pic_address"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"
-            />
-
-
-           <TextView
-               android:text="时间"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:textSize="15sp"
-               android:id="@+id/date_bill"
-               android:layout_marginTop="240dp"
-               android:layout_marginBottom="5dp"
-               android:layout_marginLeft="16dp"/>
-
-
-    </android.support.v7.widget.CardView>
+</android.support.v7.widget.CardView>
