--- a/app/src/main/res/layout/left_menu.xml
+++ b/app/src/main/res/layout/left_menu.xml
@@ -1,117 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-              android:orientation="vertical"
-    >
+              android:layout_width="300dp"
+              android:layout_height="match_parent"
+              android:layout_gravity="start|start"
+              android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:orientation="vertical"
         android:id="@+id/linearLayout"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true">
+        android:layout_width="match_parent"
+        android:layout_height="420dp"
+        android:background="@color/Blue"
+        android:orientation="vertical"
+        >
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="50dp">
-        <Button
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="25dp"
-            android:background="@mipmap/addpic"
-            android:layout_marginBottom="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
-            android:paddingLeft="6dp"
-            android:textSize="20sp"
-            android:id="@+id/add_people_button"
-            android:fontFamily="sans-serif-light"
-            android:text="添加旅行账本"
-            android:paddingTop="10dp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Button
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="25dp"
-                android:background="@mipmap/pencil"
-                android:layout_marginBottom="20dp"/>
+            android:layout_marginTop="50dp"
+            android:orientation="vertical">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:src="@drawable/face"
+                />
+
             <TextView
                 android:layout_width="wrap_content"
+                android:layout_marginTop="25dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="22dp"
-                android:paddingLeft="6dp"
-                android:textSize="20sp"
-                android:fontFamily="sans-serif-light"
-                android:id="@+id/settlemoney"
-                android:text="结算"
-                android:paddingTop="10dp"/>
+                android:layout_gravity="center"
+                android:id="@+id/user_name"
+                android:textColor="@color/blue_btn_bg_color"
+                android:textSize="25sp"
+                android:text="用户名"
+                />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <Button
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:layout_marginLeft="25dp"
-                android:background="@mipmap/all_bill"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginTop="20dp"
+                android:background="@mipmap/addpic"/>
+
             <TextView
+                android:id="@+id/add_people_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
-                android:paddingLeft="6dp"
-                android:textSize="20sp"
                 android:fontFamily="sans-serif-light"
+                android:paddingLeft="6dp"
+                android:paddingTop="10dp"
+                android:text="添加旅行账本"
+                android:textSize="20sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="20dp"
+                android:background="@mipmap/pencil"/>
+
+            <TextView
+                android:id="@+id/settlemoney"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:fontFamily="sans-serif-light"
+                android:paddingLeft="6dp"
+                android:paddingTop="10dp"
+                android:text="结算"
+                android:textSize="20sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="20dp"
+                android:background="@mipmap/all_bill"/>
+
+            <TextView
                 android:id="@+id/view_all_bills"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="22dp"
+                android:fontFamily="sans-serif-light"
+                android:paddingLeft="6dp"
+                android:paddingTop="10dp"
                 android:text="我的账本集"
-                android:paddingTop="10dp"/>
+                android:textSize="20sp"/>
         </LinearLayout>
     </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
         android:background="#ffff"
         >
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <Button
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="40dp"
                 android:background="@mipmap/exit"
-                android:layout_marginStart="25dp"
                 />
+
             <TextView
+                android:id="@+id/returnLog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="40dp"
                 android:fontFamily="sans-serif-light"
-                android:textSize="20sp"
                 android:text="退出登录"
-                android:id="@+id/returnLog"
-                android:layout_marginStart="5dp"
+                android:textSize="20sp"
                 />
         </LinearLayout>
-
-
-
     </RelativeLayout>
 </LinearLayout>
