--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="title"
+        android:textColor="@color/textColor"
         android:id="@+id/title"
         android:textSize="20dp"
         android:layout_marginTop="50dp"
@@ -27,6 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:hint="以逗号分隔"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
         android:layout_marginTop="15dp"
         android:id="@+id/editText"
 
@@ -40,8 +43,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/numofManButton"
-        android:src="@mipmap/ok"
-        app:backgroundTint="#ff87ffeb"
+        android:src="@mipmap/dui"
+        app:backgroundTint="@color/colorAccent"
         android:layout_gravity="center"
         app:rippleColor="#33728dff"
         android:elevation="10dp"
