--- a/app/src/main/res/layout/bill_descripe_layout.xml
+++ b/app/src/main/res/layout/bill_descripe_layout.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
+            android:textColor="@color/textColor"
             android:text="旅行日志"
             android:textSize="30dp"/>
 
@@ -25,8 +26,10 @@
             android:id="@+id/des_bill_edit"
             android:layout_width="270dp"
             android:layout_height="50dp"
+            android:textColor="@color/textColor"
             android:layout_gravity="center_horizontal"
             android:hint="请描述"
+            android:textColorHint="@color/textColor"
             />
 
 
@@ -34,27 +37,34 @@
             android:id="@+id/money_num_edit"
             android:layout_width="270dp"
             android:layout_height="50dp"
+            android:textColor="@color/textColor"
             android:layout_gravity="center_horizontal"
             android:hint="请输入金额"
+            android:textColorHint="@color/textColor"
             android:inputType="numberDecimal"
             />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            >
 
-            <Spinner
+            <com.jaredrummler.materialspinner.MaterialSpinner
                 android:id="@+id/name_spinner"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="20dp"
-                ></Spinner>
+                app:ms_text_color="@color/textColor"
+                app:ms_background_color="@color/mainColor"
+                ></com.jaredrummler.materialspinner.MaterialSpinner>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
+                android:textSize="20sp"
+                android:layout_marginLeft="20dp"
+                android:textColor="@color/textColor"
                 android:text="支出"/>
         </LinearLayout>
     </LinearLayout>
@@ -67,7 +77,7 @@
         android:background="@drawable/material_button"
         android:textSize="18sp"
         android:layout_marginBottom="15dp"
-        android:src="@mipmap/ok"
+        android:src="@mipmap/dui"
         />
 
 </android.support.v7.widget.CardView>
