--- a/app/src/main/res/layout/billlist_item.xml
+++ b/app/src/main/res/layout/billlist_item.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="470dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/settlebackground"/>
 
         <TextView
             android:id="@+id/txt_item"
