--- a/app/src/main/res/layout/right_content.xml
+++ b/app/src/main/res/layout/right_content.xml
@@ -11,7 +11,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="@color/Blue"
+            android:background="@color/mainColor"
             android:elevation="10dp"
             >
 
@@ -21,7 +21,7 @@
                 android:layout_height="20dp"
                 android:background="@mipmap/menubutton"
                 android:onClick="toggleMenu"
-                android:layout_marginBottom="25dp"
+                android:layout_marginBottom="30dp"
                 android:layout_gravity="left|bottom"
 
                 />
@@ -31,8 +31,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|bottom"
-                android:layout_marginBottom="25dp"
+                android:layout_marginBottom="20dp"
                 android:text="@string/TitleString"
+                android:textColor="@color/textColor"
                 android:textSize="20sp"
                 />
 
@@ -40,7 +41,7 @@
                 android:id="@+id/finish_bill"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginBottom="25dp"
+                android:layout_marginBottom="30dp"
                 android:layout_marginEnd="10dp"
                 android:layout_gravity="end|bottom"
                 android:background="@mipmap/ok"
