--- a/app/src/main/res/layout/billlist_layout.xml
+++ b/app/src/main/res/layout/billlist_layout.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     >
 
@@ -69,5 +70,19 @@
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
         ></com.yarolegovich.discretescrollview.DiscreteScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="25dp"
+        android:clickable="true"
+        android:background="?android:attr/selectableItemBackground"
+        tools:override="true"
+        android:src="@drawable/delete"
+        app:fab_size="normal"
+        app:elevation="10dp"
+        />
 
 </FrameLayout>
